--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="myCSS.css">
-        <script src="C:\Users\krish\Desktop\SubFolder\Everything\Code\Websites\New Year\confetti-js-master\dist\index.min.js"></script>
+        <script src="index.min.js"></script>
 
 		<title>
             New Year Celebration
