--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="myCSS.css">
-        <script src="index.min.js"></script>
-
+		<link rel="stylesheet" href="style.css">
 		<title>
             New Year Celebration
         </title>
@@ -15,7 +13,8 @@
 		<h1 id="text2"></h1>
 		<h1 id="text"></h1>
 		<canvas id="confetti"></canvas>
-		<script src="myJavaScript.js"></script>
+		<script src="confetti.js"></script>
+		<script src="script.js"></script>
 	</body>
 	
 </html>
